# TPS

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md
docs/: ARCHITECTURE.md  PERFORMANCE.md
scripts/: benchmark_constrained.sh  benchmark_full.sh  build.bat  build.sh  validate_all.sh
src/: benchmark.cpp  inference_engine.cpp  inference_engine.h  main.cpp  test.cpp
src/cache/: kv_cache.cpp  kv_cache.h
src/engine/: inference_engine.cpp  inference_engine.h  model_loader.cpp  model_loader.h  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h
src/memory/: memory_manager.cpp  memory_manager.h
src/quantization/: quantizer.cpp  quantizer.h
src/utils/: logger.cpp  logger.h  math_utils.cpp  math_utils.h  timer.cpp  timer.h
tests/: test_inference_engine.cpp
